Add section and article

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
 	</header>
 	<main role="main">
-
+		<section>
+			<article>
+				<h1>Lorem5</h1>
+			</article>
+		</section>
 	</main>
 	<footer class="ba-footer">
 
