fixed lang attribute

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
 	<title>Start</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta charset="UTF-8">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<link rel="icon" href="favicon.png"/>
@@ -23,6 +23,7 @@
 
 	</header>
 	<main role="main" >
+
 	</main>
 	<footer class="ba-footer">
 
